spacing fix

--- a/src/assets/styles/blocks/_read-more.scss
+++ b/src/assets/styles/blocks/_read-more.scss
@@ -9,7 +9,7 @@
     line-height: 33px;
   }
   #readMore {
-    margin: 25px 0px;
+    margin: 10px 0px 0px;
     display: inline-block;
     &.hide {
       display: none;
