--- a/src/assets/styles/blocks/_text-image.scss
+++ b/src/assets/styles/blocks/_text-image.scss
@@ -1,7 +1,7 @@
 .block-text-image {
   padding: 6rem 0rem;
   @media #{$breakpoint-sm-up} {
-    padding: 8rem 5rem;
+    padding: 6rem 5rem;
   }
   &__container {
     display: grid;
