--- a/src/assets/styles/templates/_page.scss
+++ b/src/assets/styles/templates/_page.scss
@@ -25,4 +25,7 @@
       margin-bottom: 0;
     }
   }
+  .wp-block-spacer ~ p {
+    margin-bottom: 0px;
+  }
 }
